<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/login_vertical_margin"
    android:paddingLeft="@dimen/login_horizontal_margin"
    android:paddingRight="@dimen/login_horizontal_margin"
    android:paddingTop="@dimen/login_vertical_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user"
            android:text="android"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass"
            android:inputType="textPassword"
            android:text="mobile"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/cbKeepConnected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/login_horizontal_margin"
        android:paddingBottom="@dimen/login_horizontal_margin"
        android:text="@string/keep_connected" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signIn"
        android:text="@string/connect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:paddingTop="@dimen/login_horizontal_margin"
        android:paddingBottom="@dimen/login_horizontal_margin"
        android:text="@string/or"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/lbFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
