<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="left"
        tools:text="@string/store_name" />

    <TextView
        android:id="@+id/tvRegionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        tools:text="@string/region_name" />

    <TextView
        android:id="@+id/tvBeerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        tools:text="@string/beer_name" />

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tvBeerName"
        android:layout_marginLeft="16dp"
        tools:text="@string/beer_value" />

    <ImageButton
        android:id="@+id/ibEditStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/ibDelStore"
        android:backgroundTint="@color/cardview_light_background"
        android:src="@drawable/edit_item" />

    <ImageButton
        android:id="@+id/ibDelStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/cardview_light_background"
        android:src="@drawable/del_item" />

</RelativeLayout>